--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,9 +5,10 @@
 	.sidenav-content {
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
 		gap: 12px;
 		padding: 0 20px;
-		max-height: 100%;
+		height: 100%;
 	}
 
 	.messages-container {
@@ -15,6 +16,17 @@
 		flex-direction: column-reverse;
 		overflow: auto;
 		flex: 1;
+
+		.message-entry {
+			display: flex;
+			gap: 10px;
+		}
+
+		.timestamp {
+			font-size: 0.7em;
+			color: #999;
+			max-width: 50px;
+		}
 	}
 
 	.message-input-field {
@@ -27,7 +39,26 @@
 	}
 
 	.sidenav {
-		padding: 20px;
+		display: flex;
+		padding: 20px 0;
 		width: 25%;
+
+		menu {
+			padding: 0;
+
+			ul {
+				padding: 0;
+
+				li {
+					list-style: none;
+					padding: 10px 16px;
+					cursor: pointer;
+
+					&:hover {
+						background-color: #f5f5f5;
+					}
+				}
+			}
+		}
 	}
 }
