--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,33 +4,8 @@
 
 	.sidenav-content {
 		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		gap: 12px;
 		padding: 0 20px;
 		height: 100%;
-	}
-
-	.messages-container {
-		display: flex;
-		flex-direction: column-reverse;
-		overflow: auto;
-		flex: 1;
-
-		.message-entry {
-			display: flex;
-			gap: 10px;
-		}
-
-		.timestamp {
-			font-size: 0.7em;
-			color: #999;
-			max-width: 50px;
-		}
-	}
-
-	.message-input-field {
-		width: 100%;
 	}
 
 	.drawer-container {
@@ -41,24 +16,6 @@
 	.sidenav {
 		display: flex;
 		padding: 20px 0;
-		width: 25%;
-
-		menu {
-			padding: 0;
-
-			ul {
-				padding: 0;
-
-				li {
-					list-style: none;
-					padding: 10px 16px;
-					cursor: pointer;
-
-					&:hover {
-						background-color: #f5f5f5;
-					}
-				}
-			}
-		}
+		width: 250px;
 	}
 }
