--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -12,33 +12,37 @@
 		}
 	}
 
+	.menu-item {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+
+		padding: 8px 16px;
+		list-style: none;
+		cursor: pointer;
+
+		&.active {
+			background-color: #f5f5f5;
+		}
+
+		&:hover {
+			background-color: #f5f5f5;
+		}
+
+		&.private {
+			--mat-icon-color: #888;
+		}
+	}
+
 	.latest-rooms {
 		h3 {
-			margin: 0;
-			margin-left: 16px;
+			margin: 0 16px;
 			font-weight: 500;
+			margin-bottom: 16px;
 		}
 
 		ul {
 			padding: 0;
-
-			li {
-				list-style: none;
-				padding: 10px 16px;
-				cursor: pointer;
-
-				&.active {
-					background-color: #f5f5f5;
-				}
-
-				&:hover {
-					background-color: #f5f5f5;
-				}
-
-				&::before {
-					content: "#";
-				}
-			}
 		}
 	}
 }
