--- a/src/app/message-board/message-board.component.scss
+++ b/src/app/message-board/message-board.component.scss
@@ -1,6 +1,7 @@
 :host.app-message-board {
 	display: flex;
 	width: 100%;
+	height: 100%;
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 12px;
